# voxelvr

./: .gitignore  3d_tracking_validation.json  README.md  debug_pose.py  diagnose_cameras.py  performance_log.csv  pyproject.toml  pytest.ini  reproduce_issue.py  requirements.txt  run_calibration.py  run_demo.py  run_gui.py  run_tests.py  run_tracking.py  test_output.txt  test_output_2.txt
archive/: run_gui_v1.py
docs/: GPU_SETUP.md  NETWORK_SETUP.md  QUICKSTART.md
scripts/: calibrate_from_dataset.py  check_image_stats.py  debug_calibration.py  debug_markers.py  detect_board_config.py  detect_chessboard.py  download_test_data.py  generate_test_images.py  record_dataset.py  render_combined.py  render_overlay.py  sample_data.py  test_2d_detection.py  test_unified_gui_simulation.py  test_unified_headless.py  validate_3d_tracking.py
tests/: conftest.py  debug_cpp.py  test_apriltag.py  test_calibration_integration.py  test_calibration_logic.py  test_camera_robustness.py  test_charuco_detection.py  test_confidence_filter.py  test_cross_platform.py  test_dataset_accuracy.py  test_dataset_performance.py  test_filter.py  test_freezing_logic.py  test_full_integration.py  test_full_pipeline_stress.py  test_gui.py  test_gui_integration.py  test_integration.py  test_intrinsics_perf.py  test_pairwise_extrinsics.py  test_pairwise_robustness.py  test_param_optimizer.py  test_performance.py  test_pipeline_integration.py  test_python_overhead.py  test_real_data.py  test_rotation.py  test_sanity.py  test_skeleton_calibration.py  test_tracking_error.py  test_tracking_robustness.py  (+3 more)
(+51 files in other folders)
